# xai

./: .envrc  .gitignore  LICENSE  MANIFEST.in  README.md  ROADMAP.md  env.yml  meta.yaml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tmp.html
.devcontainer/: devcontainer.json
.eggs/pytest_runner-4.2-py3.6.egg/EGG-INFO/: DESCRIPTION.rst  PKG-INFO  RECORD  entry_points.txt  metadata.json  requires.txt  top_level.txt
docs/: genindex.html  gettingstarted.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  xai.html
docs/_sources/: index.rst.txt  modules.rst.txt
docs/_static/: documentation_options.js
docs_src/: Makefile  make.bat
docs_src/source/: conf.py  gettingstarted.rst  index.rst
examples/: README.md  XAI Example Usage.ipynb  XAI Tabular Data Example Usage.ipynb  XData Example Usage.ipynb
examples/.ipynb_checkpoints/: XData Example Usage-checkpoint.ipynb
tests/: __init__.py  conftest.py  test_advanced_analysis.py  test_data_balance.py  test_data_loading.py  test_data_preprocessing.py  test_model_evaluation.py
tests/fixtures/: __init__.py  simple_test_data.py  synthetic_data.py
xai/: __init__.py  _scripts.py  xdata.py  xmodel.py  xmonitor.py
xai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xai/data/: __init__.py  census.csv
