[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xai"
version = "0.1.0"
description = "XAI - An industry-ready machine learning library that ensures explainable AI by design"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Alejandro Saucedo", email = "a@ethical.institute"}
]
keywords = ["xai", "machine learning", "deep learning", "explainability", "bias evaluation"]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "matplotlib>=3.6.0,<4.0.0",
    "numpy>=1.23.0",
    "scipy>=1.10.0,<2.0.0",
    "scikit-learn>=1.2.0,<2.0.0",
    "python-dateutil",
    "pytz",
    "pyparsing",
    "cycler",
    "kiwisolver",
    "six",
]

[project.optional-dependencies]
dev = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "pytest",
    "pytest-runner",
]

[project.urls]
"Homepage" = "https://github.com/EthicalML/XAI"
"Repository" = "https://github.com/EthicalML/XAI"

[project.scripts]
xai-clean = "xai._scripts:clean"

[tool.setuptools]
packages = ["xai", "xai.data"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["LICENSE"]
